tests/comp/sem/invalid/subscript_with_boolean.mj
class A {

	public void test(int[] foo) {
		/*** foo[true]; ***/
	}

}
